--- a/compose.yml
+++ b/compose.yml
@@ -10,23 +10,19 @@ services:
           memory: 50M
       restart_policy:
         condition: on-failure
-    networks:
-      - wekan-tier
     labels:
       traefik.http.routers.client.rule: "Host(`localhost`) && PathPrefix(`/`)"
   reverse-proxy:
     image: traefik:v3.3
-    # Enables the web UI and tells Traefik to listen to docker
-    command: --api.insecure=true --providers.docker
+    command: --providers.docker
     ports:
       - "80:80"
-      # The Web UI (enabled by --api.insecure=true)
-      - "8080:8080"
-    networks:
-      - wekan-tier
+    labels:
+      - "traefik.http.routers.dashboard.rule=Host(`traefik.example.com`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.dashboard.middlewares=dashboard-auth"
+      - "traefik.http.middlewares.dashboard-auth.basicauth.users=admin:$apr1$zyNmSGbG$hwlUaZlOHoIpHnx3.FL9N0"
     volumes:
-      # So that Traefik can listen to the Docker events
-      - /var/run/docker.sock:/var/run/docker.sock
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
 networks:
-  wekan-tier:
+  traefik_webgateway:
     driver: bridge
