--- a/compose.yml
+++ b/compose.yml
@@ -11,14 +11,14 @@ services:
       restart_policy:
         condition: on-failure
     labels:
-      traefik.http.routers.client.rule: "Host(`localhost`) && PathPrefix(`/`)"
+      traefik.http.routers.client.rule: "PathPrefix(`/`)"
       traefik.enable: true
   reverse-proxy:
     image: traefik:v3.3
     command: 
       - "--providers.docker"
       - "--providers.docker.exposedbydefault=false"
-      - "--api.insecure=true"
+      - "--api.insecure=false"
     ports:
       - "80:80"
       - "8080:8080"
